--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.10.1",
+    "@floating-ui/react": "^0.24.2",
     "axios": "^1.4.0",
     "i18next": "^22.5.0",
     "react": "^18.2.0",
