--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "@cloudinary/url-gen": "^1.10.1",
     "@floating-ui/react": "^0.24.2",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.4",
     "i18next": "^22.5.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-location": "^3.3.4",
+    "react-query": "^3.39.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.1",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.0.11",
