--- a/.github/workflows/frontend.ci.yml
+++ b/.github/workflows/frontend.ci.yml
@@ -27,4 +27,10 @@ jobs:
 
       - run: yarn
 
+      - run: yarn build
+
       - run: yarn lint
+
+      - run: yarn prettier
+
+      - run: yarn test
