--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "netlify functions:serve",
+    "build": "netlify functions:build --src functions",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
@@ -31,17 +31,25 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
+    "netlify-cli": "^15.6.0",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.1",
+    "serverless-http": "^3.2.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
-    "nodemon": "^2.0.9",
+    "node": "16.0.0",
     "prettier": "^2.8.7"
   },
+  "proxy": {
+    "/.netlify/functions": {
+      "target": "http://localhost:9000"
+    }
+  },
   "engines": {
-    "node": "14.x"
+    "node": ">=16"
   }
 }
