--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "netlify functions:serve",
     "build": "netlify functions:build --src functions",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
     "lint:check": "eslint",
