--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -1,13 +1,12 @@
 [build]
-# This will be run the site build
 command = "yarn build"
-# This is the directory is publishing to netlify's CDN
 publish = "functions-build"
-# functions build directory
-functions = "functions"
-
 
 [[redirects]]
 from = "/api/v1/*"
 to = "/.netlify/functions/:splat"
 status = 200
+
+[functions]
+node_bundler = "esbuild"
+directory = "functions/"
