--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 command = "yarn build"
-publish = "server/functions-build/"
+publish = "functions-build/"
 
 [[redirects]]
 from = "/api/v1/*"
@@ -9,4 +9,4 @@ status = 200
 
 [functions]
 node_bundler = "esbuild"
-directory = "server/functions/"
+directory = "functions/"
