fix(server): update CORS (#25)
* add redirect

* update package.json

* update netlify.toml

* update netlify.toml

* update host CORS

* update host CORS

--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -6,3 +6,9 @@ publish = "dist"
 [functions]
 node_bundler = "esbuild"
 external_node_modules = ["express", "mongodb", "vm2"]
+
+
+[[redirects]]
+from = "/api/v1/*"
+to = "/.netlify/functions/:splat"
+status = 200
