--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -1,12 +1,11 @@
 [build]
-command = "# no build command"
-functions = "functions-build"
+# This is the directory is publishing to netlify's CDN
 publish = "dist"
+# functions build directory
+functions = "functions-build"
 
 [functions]
 node_bundler = "esbuild"
-external_node_modules = ["express", "mongodb", "vm2"]
-
 
 [[redirects]]
 from = "/api/v1/*"
